src/parser/PascalParser.java
// Generated from src/PascalParser.g by ANTLR 4.13.2

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGNMENT=1, NOT_EQUAL_TO=2, LESS_THAN_OR_EQUAL_TO=3, GREATER_THAN_OR_EQUAL_TO=4, 
		RANGE=5, PLUS=6, MINUS=7, EQUAL_TO=8, MULTIPLICATION=9, DIVISION=10, LESS_THAN=11, 
		GREATER_THAN=12, OPEN_BRACKET=13, CLOSE_BRACKET=14, PERIOD=15, COMMA=16, 
		COLON=17, SEMICOLON=18, OPEN_PARENTHESIS=19, CLOSE_PARENTHESIS=20, AND=21, 
		ARRAY=22, BEGIN=23, DO=24, DOWNTO=25, ELSE=26, END=27, FOR=28, FUNCTION=29, 
		IF=30, NOT=31, OF=32, OR=33, PACKED=34, PROCEDURE=35, PROGRAM=36, THEN=37, 
		TO=38, TYPE=39, VAR=40, INTEGER=41, REAL=42, BOOLEAN=43, CHAR=44, STRING=45, 
		UNSIGNED_INTEGER=46, UNSIGNED_REAL=47, CHARACTER_STRING=48, COMMENTARY=49, 
		IDENTIFIER=50, WS=51;
	public static final int
		RULE_block = 0, RULE_variable_declaration_part = 1, RULE_procedure_and_function_declaration_part = 2, 
		RULE_constant_deifinition = 3, RULE_constant = 4, RULE_primitive_type = 5, 
		RULE_type_definition = 6, RULE_type_denoter = 7, RULE_identifier_list = 8, 
		RULE_subrange_type = 9, RULE_array_type = 10, RULE_variable_declaration = 11, 
		RULE_variable_access = 12, RULE_indexed_variable = 13, RULE_procedure_declaration = 14, 
		RULE_procedure_heading = 15, RULE_function_declaration = 16, RULE_function_heading = 17, 
		RULE_formal_parameter_list = 18, RULE_value_parameter_speficiation = 19, 
		RULE_expression = 20, RULE_simple_expression = 21, RULE_term = 22, RULE_factor = 23, 
		RULE_unsigned_constant = 24, RULE_multiplying_operator = 25, RULE_adding_operator = 26, 
		RULE_relational_operator = 27, RULE_function_designator = 28, RULE_actual_parameter_list = 29, 
		RULE_actual_parameter = 30, RULE_statement = 31, RULE_simple_statement = 32, 
		RULE_empty_statement = 33, RULE_assignment_statement = 34, RULE_procedure_statement = 35, 
		RULE_structured_statement = 36, RULE_statement_sequence = 37, RULE_compound_statement = 38, 
		RULE_if_statement = 39, RULE_else_part = 40, RULE_for_statement = 41, 
		RULE_program = 42, RULE_program_heading = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"block", "variable_declaration_part", "procedure_and_function_declaration_part", 
			"constant_deifinition", "constant", "primitive_type", "type_definition", 
			"type_denoter", "identifier_list", "subrange_type", "array_type", "variable_declaration", 
			"variable_access", "indexed_variable", "procedure_declaration", "procedure_heading", 
			"function_declaration", "function_heading", "formal_parameter_list", 
			"value_parameter_speficiation", "expression", "simple_expression", "term", 
			"factor", "unsigned_constant", "multiplying_operator", "adding_operator", 
			"relational_operator", "function_designator", "actual_parameter_list", 
			"actual_parameter", "statement", "simple_statement", "empty_statement", 
			"assignment_statement", "procedure_statement", "structured_statement", 
			"statement_sequence", "compound_statement", "if_statement", "else_part", 
			"for_statement", "program", "program_heading"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "'<>'", "'<='", "'>='", "'..'", "'+'", "'-'", "'='", "'*'", 
			"'/'", "'<'", "'>'", null, null, "'.'", "','", "':'", "';'", "'('", "')'", 
			"'and'", "'array'", "'begin'", "'do'", "'downto'", "'else'", "'end'", 
			"'for'", "'function'", "'if'", "'not'", "'of'", "'or'", "'packed'", "'procedure'", 
			"'program'", "'then'", "'to'", "'type'", "'var'", "'integer'", "'real'", 
			"'boolean'", "'char'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGNMENT", "NOT_EQUAL_TO", "LESS_THAN_OR_EQUAL_TO", "GREATER_THAN_OR_EQUAL_TO", 
			"RANGE", "PLUS", "MINUS", "EQUAL_TO", "MULTIPLICATION", "DIVISION", "LESS_THAN", 
			"GREATER_THAN", "OPEN_BRACKET", "CLOSE_BRACKET", "PERIOD", "COMMA", "COLON", 
			"SEMICOLON", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "AND", "ARRAY", 
			"BEGIN", "DO", "DOWNTO", "ELSE", "END", "FOR", "FUNCTION", "IF", "NOT", 
			"OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", "THEN", "TO", "TYPE", "VAR", 
			"INTEGER", "REAL", "BOOLEAN", "CHAR", "STRING", "UNSIGNED_INTEGER", "UNSIGNED_REAL", 
			"CHARACTER_STRING", "COMMENTARY", "IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PascalParser.g"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Variable_declaration_partContext variable_declaration_part() {
			return getRuleContext(Variable_declaration_partContext.class,0);
		}
		public Procedure_and_function_declaration_partContext procedure_and_function_declaration_part() {
			return getRuleContext(Procedure_and_function_declaration_partContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			variable_declaration_part();
			setState(89);
			procedure_and_function_declaration_part();
			setState(90);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declaration_partContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(PascalParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(PascalParser.VAR, i);
		}
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PascalParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PascalParser.SEMICOLON, i);
		}
		public Variable_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_part; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitVariable_declaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaration_partContext variable_declaration_part() throws RecognitionException {
		Variable_declaration_partContext _localctx = new Variable_declaration_partContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable_declaration_part);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(92);
				match(VAR);
				setState(93);
				variable_declaration();
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(94);
						match(SEMICOLON);
						setState(95);
						variable_declaration();
						}
						} 
					}
					setState(100);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(101);
				match(SEMICOLON);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Procedure_and_function_declaration_partContext extends ParserRuleContext {
		public List<TerminalNode> SEMICOLON() { return getTokens(PascalParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PascalParser.SEMICOLON, i);
		}
		public List<Procedure_declarationContext> procedure_declaration() {
			return getRuleContexts(Procedure_declarationContext.class);
		}
		public Procedure_declarationContext procedure_declaration(int i) {
			return getRuleContext(Procedure_declarationContext.class,i);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public Procedure_and_function_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_and_function_declaration_part; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitProcedure_and_function_declaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Procedure_and_function_declaration_partContext procedure_and_function_declaration_part() throws RecognitionException {
		Procedure_and_function_declaration_partContext _localctx = new Procedure_and_function_declaration_partContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procedure_and_function_declaration_part);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION || _la==PROCEDURE) {
				{
				{
				setState(110);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROCEDURE:
					{
					setState(108);
					procedure_declaration();
					}
					break;
				case FUNCTION:
					{
					setState(109);
					function_declaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112);
				match(SEMICOLON);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Constant_deifinitionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PascalParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL_TO() { return getToken(PascalParser.EQUAL_TO, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Constant_deifinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_deifinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitConstant_deifinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constant_deifinitionContext constant_deifinition() throws RecognitionException {
		Constant_deifinitionContext _localctx = new Constant_deifinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constant_deifinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IDENTIFIER);
			setState(120);
			match(EQUAL_TO);
			setState(121);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode UNSIGNED_INTEGER() { return getToken(PascalParser.UNSIGNED_INTEGER, 0); }
		public TerminalNode UNSIGNED_REAL() { return getToken(PascalParser.UNSIGNED_REAL, 0); }
		public TerminalNode PLUS() { return getToken(PascalParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PascalParser.MINUS, 0); }
		public TerminalNode CHARACTER_STRING() { return getToken(PascalParser.CHARACTER_STRING, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant);
		int _la;
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
			case UNSIGNED_INTEGER:
			case UNSIGNED_REAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
				case MINUS:
				case UNSIGNED_INTEGER:
					{
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==PLUS || _la==MINUS) {
						{
						setState(123);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
					}

					setState(126);
					match(UNSIGNED_INTEGER);
					}
					break;
				case UNSIGNED_REAL:
					{
					setState(127);
					match(UNSIGNED_REAL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case CHARACTER_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(CHARACTER_STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Primitive_typeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(PascalParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(PascalParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(PascalParser.BOOLEAN, 0); }
		public TerminalNode CHAR() { return getToken(PascalParser.CHAR, 0); }
		public TerminalNode STRING() { return getToken(PascalParser.STRING, 0); }
		public Primitive_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitPrimitive_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_typeContext primitive_type() throws RecognitionException {
		Primitive_typeContext _localctx = new Primitive_typeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primitive_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 68169720922112L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_definitionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PascalParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL_TO() { return getToken(PascalParser.EQUAL_TO, 0); }
		public Type_denoterContext type_denoter() {
			return getRuleContext(Type_denoterContext.class,0);
		}
		public Type_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitType_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_definitionContext type_definition() throws RecognitionException {
		Type_definitionContext _localctx = new Type_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			setState(136);
			match(EQUAL_TO);
			setState(137);
			type_denoter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_denoterContext extends ParserRuleContext {
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PascalParser.IDENTIFIER, 0); }
		public Type_denoterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_denoter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitType_denoter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_denoterContext type_denoter() throws RecognitionException {
		Type_denoterContext _localctx = new Type_denoterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type_denoter);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case REAL:
			case BOOLEAN:
			case CHAR:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				primitive_type();
				}
				break;
			case ARRAY:
			case PACKED:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				array_type();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identifier_listContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(PascalParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PascalParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PascalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PascalParser.COMMA, i);
		}
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitIdentifier_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_identifier_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(IDENTIFIER);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(145);
				match(COMMA);
				setState(146);
				match(IDENTIFIER);
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Subrange_typeContext extends ParserRuleContext {
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public TerminalNode RANGE() { return getToken(PascalParser.RANGE, 0); }
		public Subrange_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subrange_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitSubrange_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subrange_typeContext subrange_type() throws RecognitionException {
		Subrange_typeContext _localctx = new Subrange_typeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subrange_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			constant();
			setState(153);
			match(RANGE);
			setState(154);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(PascalParser.ARRAY, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(PascalParser.OPEN_BRACKET, 0); }
		public List<Subrange_typeContext> subrange_type() {
			return getRuleContexts(Subrange_typeContext.class);
		}
		public Subrange_typeContext subrange_type(int i) {
			return getRuleContext(Subrange_typeContext.class,i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(PascalParser.CLOSE_BRACKET, 0); }
		public TerminalNode OF() { return getToken(PascalParser.OF, 0); }
		public Type_denoterContext type_denoter() {
			return getRuleContext(Type_denoterContext.class,0);
		}
		public TerminalNode PACKED() { return getToken(PascalParser.PACKED, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PascalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PascalParser.COMMA, i);
		}
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitArray_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_array_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKED) {
				{
				setState(156);
				match(PACKED);
				}
			}

			setState(159);
			match(ARRAY);
			setState(160);
			match(OPEN_BRACKET);
			setState(161);
			subrange_type();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(162);
				match(COMMA);
				setState(163);
				subrange_type();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(CLOSE_BRACKET);
			setState(170);
			match(OF);
			setState(171);
			type_denoter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PascalParser.COLON, 0); }
		public Type_denoterContext type_denoter() {
			return getRuleContext(Type_denoterContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}
